--- a/bro/SHA_login1.html
+++ b/bro/SHA_login1.html
@@ -12,7 +12,7 @@
         <div class="texttitle2">危險性機械及設備檢查資訊管理系統─事業單位檢查申請</div>
     </div>
     <div class="topcube">
-        <img src="pic3.jpg" width="900" height="360">
+        <img src="/pic/pic3.jpg" width="900" height="360">
         <div class="texttop">事業單位檢查申請</div>
     </div>
 
