--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
                     <div class="login-form">
                         <div class="l-block form-group">
                             <input class="input-style error" type="text" placeholder="單位代號">
+                            <span class="icon"></span>
                         </div>
                         <div class="l-block form-group">
-                            <input class="input-style" type="text" placeholder="身分證號">
+                            <input class="input-style succes" type="text" placeholder="身分證號">
                         </div>
                         <div class="l-block form-group">
                             <input class="input-style" type="text" placeholder="系統密碼">
@@ -152,7 +153,7 @@
 
     <footer>
         <div class="container">
-            <p>@ 系統版本：2022 Optimize Version 危險性機械及設備檢查資訊管理系統　建議使用1024 x 768 以上瀏覽本站以獲取最佳瀏覽效果。</p>
+            <p>@ 系統版本：2022 Optimize Version 危險性機械及設備檢查資訊管理系統 建議使用1024 x 768 <br> 以上瀏覽本站以獲取最佳瀏覽效果。</p>
         </div>
     </footer>
 
