--- a/bro/SHA_login2.html
+++ b/bro/SHA_login2.html
@@ -4,7 +4,52 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style2.css" type="text/css">
 </head>
-<body bgcolor="#DDDDDD">
-    <div id="textlogin">系統登入</div>
+<body>    
+    <div class="titlecube">
+        <img class="shalogo" src="/pic/logo1.png">
+        <span>勞動部職業安全衛生署</span>
+        <div class="title1">危險性機械及設備檢查資訊管理系統</div>
+    </div>
+    <div class="slidecube">
+        <img class="slide2" src="/pic/slide2.png" width="100%" height="100%">
+    </div>
+    <div class="logincube">
+        <div class="textlogin">系統登入</div>
+        <hr class="hr1" size="3px" color="#0062FF" width="80px" height="0px">
+
+        <div class="lglabel">所屬單位：</div>
+        <input type="text" class="lginput">
+
+        <div class="lglabel">系統帳號：</div>
+        <input type="text" class="lginput">
+
+        <div class="lglabel">系統密碼：</div>
+        <input type="password" class="lginput">
+
+        <div class="lglabel">驗證碼：</div>
+        <input type="text" class="vercode">
+        <img class="verpic" src="/pic/ver-code.png">
+        <a href="#" class="lbtn-ver" id="" style="text-decoration: none;">重新產生</a>
+
+        <a href="#" class="lbtn" id="" style="text-decoration: none;">登入</a><br/>
+        <a href="#" class="lbtn-digi" id="" style="text-decoration: none;">自然人憑證登入</a>
+
+        <div class="digilabel">本系統支援自然人憑證登入您可點選提交鍵使用</div>
+
+        <hr class="hr2" size="3px" color="#E0E0E0" width="600px" height="0px" align="center">
+
+        <div class="atten">
+            <div class="textatten">注意事項：</div>
+            <ul class="atten-inner">
+                <li class="atten-item">忘記登入帳號密碼，請按 <a href="#" class="atten-btn" id="">忘記密碼</a>。</li>
+                <li class="atten-item">提醒閒置超過20分鐘，系統自動排除使用者，請重新登入帳號密碼。</li>
+                <li class="atten-item">本網站網址採用SSL加密機制，可保護貴單位所提供資料的傳輸安全，敬請放心填報。</li>
+            </ul>
+        </div>
+
+        <div class="btmcube">
+            <div class="textbtm">@ 系統版本：2022 Optimize Version 危險性機械及設備檢查資訊管理系統<br/>建議使用1024 x 768 以上瀏覽本站以獲取最佳瀏覽效果。</div>
+        </div>
+    </div>
 </body>
 </html>
