--- a/NaturalLogin.html
+++ b/NaturalLogin.html
@@ -110,9 +110,9 @@
                 </div>
                 <div class="o-block login-info">
                     <div class="o-title">
-                        <h4>帳號密碼登入</h4>
-                        <a href="NaturalLogin.html" class="btns btn-outline-orange">
-                            <div class="text">行動自然人憑證登入</div>
+                        <h4>行動自然人憑證登入</h4>
+                        <a href="index.html" class="btns btn-outline-orange">
+                            <div class="text">帳號密碼登入</div>
                         </a>
                     </div>
                     <div class="login-form">
@@ -123,29 +123,30 @@
                         <div class="l-block form-group succes prefix" data-prefix="身分證號:">
                             <input class="input-style" type="text">
                         </div>
-                        <div class="l-block form-group prefix" data-prefix="系統密碼:">
-                            <input class="input-style" type="password">
-                        </div>
                         
-                        <span class="forgot-p">忘記登入帳號密碼，請按<a href="#">忘記密碼</a></span>
+                        <span class="forgot-p">請掃描／點擊您的TW FidO 掃描QRcode</a></span>
 
-                        <div class="verify">
-                            <div class="form-group">
-                                <input class="input-style" type="text" placeholder="驗證碼">
-                            </div>
-                            <div class="verify-img">
-                                <img src="img/online/verify.png" alt="">
-                            </div>
-                            <a href="#" class="btns btn-outline-orange">
-                                <div class="text">查詢</div>
-                            </a>
-                        </div>
+
                         <div class="login-btn">
                             <a href="#" class="btns btn-orange">
-                                <div class="text">登入</div>
+                                <div class="text">產生TW FidO登入QRcode</div>
                             </a>
-                            <span class="login-ip">您目前的電腦IP：180.177.28.111</span>
                         </div>
+
+                        <div class="verify">
+                            <div class="qrcode-img">
+                                <img src="img/online/qrcode.jpg" alt="">
+                            </div>
+                            <div class="make-qrcode">
+                                <a href="#" class="btns btn-outline-orange">
+                                    <div class="text">重新產生</div>
+                                </a>
+                                <span>驗證有效時間　02：43</span>
+                            </div>
+                        </div>
+
+                        <span class="login-ip">您目前的電腦IP：180.177.28.111</span>
+                        
                     </div>
                 </div>
             </div>
