--- a/bro/SHA_login2.html
+++ b/bro/SHA_login2.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style2.css" type="text/css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style2.css" type="text/css">
 </head>
 <body>    
     <div class="titlecube">
-        <img class="shalogo" src="/pic/logo1.png">
+        <img class="shalogo" src="pic/logo1.png">
         <span>勞動部職業安全衛生署</span>
         <div class="title1">危險性機械及設備檢查資訊管理系統</div>
     </div>
     <div class="slidecube">
-        <img class="slide2" src="/pic/slide2.png" width="100%" height="100%">
+        <img class="slide2" src="pic/slide2.png" width="100%" height="100%">
     </div>
     <div class="logincube">
         <div class="textlogin">系統登入</div>
@@ -28,7 +28,7 @@
 
         <div class="lglabel">驗證碼：</div>
         <input type="text" class="vercode">
-        <img class="verpic" src="/pic/ver-code.png">
+        <img class="verpic" src="pic/ver-code.png">
         <a href="#" class="lbtn-ver" id="" style="text-decoration: none;">重新產生</a>
 
         <a href="#" class="lbtn" id="" style="text-decoration: none;">登入</a><br/>
