--- a/NaturalLogin.html
+++ b/NaturalLogin.html
@@ -128,7 +128,7 @@
 
 
                         <div class="login-btn">
-                            <a href="#" class="btns btn-orange">
+                            <a href="page/Add.html" class="btns btn-orange">
                                 <div class="text">產生TW FidO登入QRcode</div>
                             </a>
                         </div>
