--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             </a>
                         </div>
                         <div class="login-btn">
-                            <a href="#" class="btns btn-orange">
+                            <a href="page/Add.html" class="btns btn-orange">
                                 <div class="text">登入</div>
                             </a>
                             <span class="login-ip">您目前的電腦IP：180.177.28.111</span>
