--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+body class="basic">
     <header>
         <div class="container">
             <div class="top-nav">
