--- a/bro/SHA_login2.html
+++ b/bro/SHA_login2.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style2.css" type="text/css">
 </head>
-body class="basic">    
+<body class="basic">    
     <div class="titlecube">
         <img class="shalogo" src="pic/logo1.png">
         <span>勞動部職業安全衛生署</span>
