--- a/bro/SHA_login2.html
+++ b/bro/SHA_login2.html
@@ -6,16 +6,17 @@
 </head>
 <body>    
     <div class="titlecube">
-        <img class="shalogo" src="/pic/logo1.png">
-        <span>勞動部職業安全衛生署</span>
-        <div class="title1">危險性機械及設備檢查資訊管理系統</div>
+        <img class="shalogo" src="pic/logo1.png">
+        <div class="title1">勞動部職業安全衛生署</div>
+        <div class="title2">危險性機械及設備檢查資訊管理系統</div>
     </div>
+    <div style="clear:both"></div>
     <div class="slidecube">
-        <img class="slide2" src="/pic/slide2.png" width="100%" height="100%">
+        <img src="pic/slide2.png">
     </div>
     <div class="logincube">
         <div class="textlogin">系統登入</div>
-        <hr class="hr1" size="3px" color="#0062FF" width="80px" height="0px">
+        <hr class="hr1" color="#0062FF">
 
         <div class="lglabel">所屬單位：</div>
         <input type="text" class="lginput">
@@ -28,15 +29,15 @@
 
         <div class="lglabel">驗證碼：</div>
         <input type="text" class="vercode">
-        <img class="verpic" src="/pic/ver-code.png">
-        <a href="#" class="lbtn-ver" id="" style="text-decoration: none;">重新產生</a>
-
-        <a href="#" class="lbtn" id="" style="text-decoration: none;">登入</a><br/>
-        <a href="#" class="lbtn-digi" id="" style="text-decoration: none;">自然人憑證登入</a>
+        <img class="verpic" src="pic/ver-code.png">
+        <a href="#" class="lbtn-ver" id="">重新產生</a>
+        <br/>
+        <a href="#" class="lbtn" id="">登入</a><br/>
+        <a href="#" class="lbtn-digi" id="">自然人憑證登入</a>
 
         <div class="digilabel">本系統支援自然人憑證登入您可點選提交鍵使用</div>
 
-        <hr class="hr2" size="3px" color="#E0E0E0" width="600px" height="0px" align="center">
+        <hr class="hr2" color="#E0E0E0" align="center">
 
         <div class="atten">
             <div class="textatten">注意事項：</div>
