--- a/InspectLogin-natural.html
+++ b/InspectLogin-natural.html
@@ -31,7 +31,7 @@
         <div class="inspect-operate">
             <div class="inspect-operate-inner">
                 <div class="inspect-operate-title">
-                    <h1>系統登入</h1>
+                    <h1>自然人憑證登入</h1>
                 </div>
                 <form>
                     <div class="form-top">
@@ -47,23 +47,18 @@
                         </div>
                     </div>
                     <div class="form-top">
+                        <div class="form-name"><span>PIN碼：</span></div>
+                        <div class="form-group">
+                            <input class="input-style" type="text">
+                        </div>
+                    </div>
+                    <div class="form-top">
                         <div class="form-name"><span>系統密碼：</span></div>
                         <div class="form-group">
                             <input class="input-style" type="text">
                         </div>
                     </div>
-                    <div class="verify form-top">
-                        <div class="form-group">
-                            <!-- <div class="form-name"><span>驗證碼：</span></div> -->
-                            <input class="input-style" type="text" placeholder="驗證碼">
-                        </div>
-                        <div class="verify-img">
-                            <img src="img/online/verify.png" alt="">
-                        </div>
-                        <a href="#" class="btns btn-outline-blue">
-                            <div class="text">查詢</div>
-                        </a>
-                    </div>
+                    
                     <div class="login-btn">
                         <a href="page/InspectAdd.html" class="btns btn-blue col-md-4">
                             <div class="text">登入</div>
@@ -71,10 +66,10 @@
                     </div>
 
                     <div class="login-btn-option">
-                        <a href="InspectLogin-natural.html" class="btns btn-outline-blue">
-                            <div class="text">自然人憑證登入</div>
+                        <a href="InspectLogin.html" class="btns btn-outline-blue">
+                            <div class="text">帳號密碼登入</div>
                         </a>
-                        <span>本系統支援自然人憑證登入您可點選提交鍵使用</span>
+                        <span>單位機構內登入您可點選使用</span>
                     </div>
                 </form>
 
