--- a/index.html
+++ b/index.html
@@ -116,11 +116,12 @@
                         </a>
                     </div>
                     <div class="login-form">
-                        <div class="l-block form-group error prefix" data-prefix="單位代號:">
+                         <!-- 在此l-block處加上error(錯誤)，succes(成功) -->
+                        <div class="l-block form-group prefix" data-prefix="單位代號:">
                             <input class="input-style" type="text">
                             <span class="icon"></span>
                         </div>
-                        <div class="l-block form-group succes prefix" data-prefix="身分證號:">
+                        <div class="l-block form-group prefix" data-prefix="身分證號:">
                             <input class="input-style" type="text">
                         </div>
                         <div class="l-block form-group prefix" data-prefix="系統密碼:">
@@ -141,7 +142,7 @@
                             </a>
                         </div>
                         <div class="login-btn">
-                            <a href="page/Add.html" class="btns btn-orange">
+                            <a href="page/notify.html" class="btns btn-orange">
                                 <div class="text">登入</div>
                             </a>
                             <span class="login-ip">您目前的電腦IP：180.177.28.111</span>
@@ -158,7 +159,7 @@
 
     <footer>
         <div class="container">
-            <p>@ 系統版本：2022 Optimize Version 危險性機械及設備檢查資訊管理系統 建議使用1024 x 768 <br> 以上瀏覽本站以獲取最佳瀏覽效果。</p>
+            <p>@ 系統版本：2022 Optimize Version 危險性機械及設備檢查資訊管理系統，建議使用1024 x 768 <br> 以上瀏覽本站以獲取最佳瀏覽效果。</p>
         </div>
     </footer>
 
