--- a/NaturalLogin.html
+++ b/NaturalLogin.html
@@ -126,7 +126,7 @@
                         
 
                         <div class="login-btn">
-                            <a href="page/Add.html" class="btns btn-orange">
+                            <a href="page/notify.html" class="btns btn-orange">
                                 <div class="text">產生TW FidO登入QRcode</div>
                             </a>
                         </div>
@@ -159,7 +159,7 @@
 
     <footer>
         <div class="container">
-            <p>@ 系統版本：2022 Optimize Version 危險性機械及設備檢查資訊管理系統 建議使用1024 x 768 <br> 以上瀏覽本站以獲取最佳瀏覽效果。</p>
+            <p>@ 系統版本：2022 Optimize Version 危險性機械及設備檢查資訊管理系統，建議使用1024 x 768 <br> 以上瀏覽本站以獲取最佳瀏覽效果。</p>
         </div>
     </footer>
 
