--- a/NaturalLogin.html
+++ b/NaturalLogin.html
@@ -35,11 +35,11 @@
                         <img src="img/online/slide1.jpg" alt="">
                     </div>
                 </div>
-                <div class="carousel-block">
+                <!-- <div class="carousel-block">
                     <div class="carousel-img">
                         <img src="img/online/slide1.jpg" alt="">
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="operate-part">
                 <div class="o-block home-info">
@@ -116,11 +116,11 @@
                         </a>
                     </div>
                     <div class="login-form">
-                        <div class="l-block form-group error prefix" data-prefix="單位代號:">
+                        <div class="l-block form-group prefix" data-prefix="單位代號:">
                             <input class="input-style" type="text">
                             <span class="icon"></span>
                         </div>
-                        <div class="l-block form-group succes prefix" data-prefix="身分證號:">
+                        <div class="l-block form-group prefix" data-prefix="身分證號:">
                             <input class="input-style" type="text">
                         </div>
                         
