--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                         <img src="img/online/slide1.jpg" alt="">
                     </div>
                 </div>
-                <div class="carousel-block">
+                <!-- <div class="carousel-block">
                     <div class="carousel-img">
                         <img src="img/online/slide1.jpg" alt="">
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="operate-part">
                 <div class="o-block home-info">
